--- a/이진탐색_고정점 찾기.md
+++ b/이진탐색_고정점 찾기.md
@@ -1,5 +1,5 @@
 ### 문제.
-![image-3.png](attachment:image-3.png)
+![image](https://user-images.githubusercontent.com/95834067/160602809-d5664bc4-e3c0-4550-b2b3-0b6af322b099.png)
 
 
 ```python
