--- a/팩토리얼.md
+++ b/팩토리얼.md
@@ -2,10 +2,10 @@
 * 백준 1676번
 
 ### 아이디어
-# 뒤에서부터 처음 0이 아닌 숫자 -> 0의 개수를 구하는 것이니까 5의 배수를 구하면 된다.
-# 5의 배수 -> 5, 10, 15, 20 ...
-# 25의 배수 -> 25(5*5), 50(5*5*2), 75(5*5*3) ... -> 이 때, 5의 개수가 +1 된다.
-# 125의 배수 -> 125(5*5*5), 250(5*5*5*2), 375(5*5*5*3) ... -> 이 때, 5의 개수가 +1 된다.
+* 뒤에서부터 처음 0이 아닌 숫자 -> 0의 개수를 구하는 것이니까 5의 배수를 구하면 된다.
+* 5의 배수 -> 5, 10, 15, 20 ...
+* 25의 배수 -> 25(5*5), 50(5*5*2), 75(5*5*3) ... -> 이 때, 5의 개수가 +1 된다.
+* 125의 배수 -> 125(5*5*5), 250(5*5*5*2), 375(5*5*5*3) ... -> 이 때, 5의 개수가 +1 된다.
 
 ```python
 import sys
