--- a/시뮬레이션_1차원 젠가.md
+++ b/시뮬레이션_1차원 젠가.md
@@ -24,27 +24,31 @@ n개의 층으로 이루어진 1차원 젠가의 상태가 주어집니다. 각 
 n = int(input())
 numbers = [int(input()) for _ in range(n)]
 
-end_of_array = n
+# end_of_array = n
 
-def cut_array(start_idx, end_idx):
-    global end_of_array
-    temp_arr = []
+# def cut_array(start_idx, end_idx):
+#     global end_of_array
+#     temp_arr = []
 
-    # 구간 외의 부분만 temp 배열에 순서대로 저장한다. 
-    for i in range(end_of_array):
-        if i < start_idx or i > end_idx :
-            temp_arr.append(numbers[i])
+#     # 구간 외의 부분만 temp 배열에 순서대로 저장한다. 
+#     for i in range(end_of_array):
+#         if i < start_idx or i > end_idx :
+#             temp_arr.append(numbers[i])
     
-    # temp 배열을 다시 numbers 배열로 옮겨준다. 
-    end_of_array = len(temp_arr)
-    for i in range(end_of_array):
-        numbers[i] = temp_arr[i]
+#     end_of_array = len(temp_arr)
+#     for i in range(end_of_array):
+#         numbers[i] = temp_arr[i]
 
-for i in range(2):
+# for i in range(2):
+#     s, e = map(int, input().split())
+#     cut_array(s-1, e-1)
+
+for _ in range(2) :
     s, e = map(int, input().split())
-    cut_array(s-1, e-1)
+    s -= 1
+    e -= 1
+    numbers = numbers[:s] + numbers[e+1:]
 
-print(end_of_array)
-for i in range(end_of_array):
-    print(numbers[i])
+print(len(numbers))
+print(*numbers, sep = '\n')
 ```
