--- a/문자열_영단어 암기는 괴로워.md
+++ b/문자열_영단어 암기는 괴로워.md
@@ -5,7 +5,7 @@
 ### 풀이
 * dict 사용
 * 입력을 받으면서 dict에 넣기
-* 그 후, lambda를 이용하여 dict를 정렬해주기
+* 그 후, lambda를 이용하여 dict를 정렬해주기 (dict 정렬하는 것 잘 알아두기)
 
 ```python
 import sys
