--- a/문자열_영단어 암기는 괴로워.md
+++ b/문자열_영단어 암기는 괴로워.md
@@ -16,7 +16,7 @@ note = dict()
 
 for _ in range(n):
     word = input().rstrip()
-    if len(word) >= 4:
+    if len(word) >= :
         if word in note:
             note[word] += 1
         else:
